fix overflow in table

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -146,6 +146,7 @@ table {
   margin-bottom: 20px;
   background: radial-gradient(#2B4A6F, #143153);
   box-shadow: 0 0 10px rgb(0, 200, 255);
+  hyphens: auto;
 }
 
 th,
