--- a/src/scss/modules/general.scss
+++ b/src/scss/modules/general.scss
@@ -152,6 +152,7 @@ table {
     margin-bottom: 20px;
     background: radial-gradient($color-primary-0, $color-primary-3);
     box-shadow: 0 0 10px $color-main;
+    hyphens: auto;
   }
   
   th,
